Refactor index.html for improved structure and clarity

--- a/index.html
+++ b/index.html
@@ -1,146 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>TorDirect</title>
-  <link rel="stylesheet" href="style.css" />
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
-  <style>
-    /* Minimal helpful styles so UI looks tidy if your style.css is missing */
-    body { font-family: "Inter", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial; margin:24px; color:#111; }
-    header h1 { margin:0 0 16px 0; font-size:20px; }
-    .hero { margin-bottom:20px; }
-    .input-area { display:flex; gap:8px; align-items:center; flex-wrap:wrap; }
-    input[type="text"] { padding:8px; min-width:300px; }
-    .file-label { display:inline-flex; align-items:center; gap:8px; cursor:pointer; }
-    .content-area { display:grid; grid-template-columns: 320px 1fr; gap:16px; align-items:start; }
-    .content-box { padding:12px; border:1px solid #eee; border-radius:8px; background:#fafafa; min-height:120px; }
-    #logs { max-height:240px; overflow:auto; font-size:13px; color:#333; }
-    #fileList li { margin:8px 0; }
-    button { padding:6px 10px; cursor:pointer; }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>TorDirect</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <header>
-    <img src="logo.png" alt="Logo" style="height:48px; vertical-align:middle; margin-right:12px;">
-    <h1 style="display:inline-block; vertical-align:middle;">TorDirect - Your Personal Torrent Web Client</h1>
-  </header>
+    <header>
+        <img src="logo.png" alt="My Torrent Client - Logo and Title" class="logo-image">
+        <h1>TorDirect - Your Personal Torrent Web Client</h1>
+        <!-- Maybe add a logo or subtitle here later -->
+    </header>
 
-  <section class="hero">
-    <h2>Peer-to-Peer File Sharing</h2>
-    <p class="subtitle">Download & Stream Torrents Directly in Your Browser</p>
-    <div class="input-area">
-      <input type="text" id="torrentIdInput" placeholder="Paste Magnet Link or Info Hash..." />
-      <label class="file-label" title="Select a .torrent file">
-        <span>📁 Or Choose File</span>
-        <input type="file" id="torrentFileInput" accept=".torrent" style="display:none;">
-      </label>
-      <button id="startButton">Start Transfer</button>
-    </div>
-    <p class="disclaimer"><strong>Disclaimer:</strong> Only use this tool for content you have the legal right to share and download. Downloading copyrighted material without permission may be illegal.</p>
-  </section>
+    <section class="hero">
+        <h2>Peer-to-Peer File Sharing</h2>
+        <p class="subtitle">Download & Stream Torrents Directly in Your Browser</p>
+        <div class="input-area">
+            <input type="text" id="torrentIdInput" placeholder="Paste Magnet Link or Info Hash...">
+            <label class="file-label">
+                <span><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-file-earmark-arrow-up" viewBox="0 0 16 16"> <path d="M8.5 11.5a.5.5 0 0 1-1 0V7.707L6.354 8.854a.5.5 0 1 1-.708-.708l2-2a.5.5 0 0 1 .708 0l2 2a.5.5 0 0 1-.708.708L8.5 7.707V11.5z"/> <path d="M14 14V4.5L9.5 0H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2zM9.5 3A1.5 1.5 0 0 0 11 4.5h2V14a1 1 0 0 1-1 1H4a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h5.5v2z"/> </svg> Or Choose File</span>
+                <input type="file" id="torrentFileInput" accept=".torrent">
+            </label>
+            <button id="startButton">Start Transfer</button>
+        </div>
+         <p class="disclaimer"><strong>Disclaimer:</strong> Only use this tool for content you have the legal right to share and download. Downloading copyrighted material without permission may be illegal.</p>
+    </section>
 
-  <main class="content-area">
-    <div id="status" class="content-box">
-      <h2>Status</h2>
-      <div id="logs">Ready.</div>
-      <div id="progress"></div>
-      <div id="peers">Peers: 0</div>
-    </div>
+    <main class="content-area">
+        <div id="status" class="content-box">
+            <h2>Status</h2>
+            <div id="logs">Ready.</div>
+            <div id="progress"></div>
+            <div id="peers">Peers: 0</div>
+        </div>
 
-    <div id="files" class="content-box">
-      <h2>Files</h2>
-      <ul id="fileList"></ul>
-    </div>
+        <div id="files" class="content-box">
+            <h2>Files</h2>
+            <ul id="fileList"></ul>
+        </div>
 
-    <div id="player" class="content-box">
-      <h2>Streaming Player</h2>
-      <h3 id="player-note" style="color:green;">Loading WebTorrent…</h3>
-      <!-- Video/Audio tags will be appended here -->
-    </div>
-  </main>
+        <div id="player" class="content-box">
+            <h2>Streaming Player</h2>
+            <h3 style="color:Red;">WARNING!!!!Broken due to webtorrent latest api. Stay updated for the fix.</h3>
+            <!-- Video/Audio tags will be appended here -->
+        </div>
+    </main>
 
-  <footer style="margin-top:18px;">
-    <p>Powered by <a href="https://webtorrent.io/" target="_blank" rel="noopener noreferrer">WebTorrent</a>. Designed by <a href="https://github.com/devilGamer5802">devilGamer5802</a></p>
-  </footer>
+    <footer>
+        <p>Powered by <a href="https://webtorrent.io/" target="_blank" rel="noopener noreferrer">WebTorrent</a>. Designed and developed by <a href="https://github.com/devilGamer5802">devilGamer5802</a></p>
+    </footer>
 
-  <!-- Module-aware WebTorrent loader:
-       1) Try ESM import from unpkg (recommended for GitHub Pages)
-       2) Fallback to local UMD at ./dist/webtorrent.min.js (your repo's dist folder)
-       3) Final fallback to ./webtorrent.min.js (root) if present
-       After WebTorrent is available, inject script.js
-  -->
-  <script type="module">
-    (async () => {
-      const logsEl = document.getElementById('logs');
-      const playerNote = document.getElementById('player-note');
-      function writeLog(msg) { if (logsEl) logsEl.innerHTML = `[${new Date().toLocaleTimeString()}] ${msg}<br>` + logsEl.innerHTML; }
-
-      // 1) Try ESM from unpkg first
-      try {
-        writeLog('Attempting to import WebTorrent ESM from unpkg...');
-        const mod = await import('https://unpkg.com/webtorrent@2.8.4/index.js');
-        window.WebTorrent = mod.default || mod.WebTorrent || mod;
-        if (!window.WebTorrent) throw new Error('Imported module did not expose WebTorrent');
-        writeLog('WebTorrent ESM loaded from unpkg.');
-        playerNote.textContent = 'WebTorrent loaded (ESM).';
-      } catch (esmErr) {
-        console.warn('ESM import failed:', esmErr);
-        writeLog('ESM import failed: ' + (esmErr && esmErr.message ? esmErr.message : esmErr));
-
-        // 2) Fallback: ./dist/webtorrent.min.js
-        try {
-          writeLog('Attempting local UMD fallback at ./dist/webtorrent.min.js');
-          await new Promise((resolve, reject) => {
-            const s = document.createElement('script');
-            s.src = './dist/webtorrent.min.js';
-            s.onload = () => resolve();
-            s.onerror = () => reject(new Error('Failed to load ./dist/webtorrent.min.js'));
-            document.head.appendChild(s);
-          });
-          if (!window.WebTorrent) throw new Error('Local dist UMD loaded but window.WebTorrent missing');
-          writeLog('WebTorrent UMD loaded from ./dist/webtorrent.min.js');
-          playerNote.textContent = 'WebTorrent loaded (local dist UMD).';
-        } catch (distErr) {
-          console.warn('Local dist fallback failed:', distErr);
-          writeLog('Local dist fallback failed: ' + (distErr && distErr.message ? distErr.message : distErr));
-
-          // 3) Final fallback: ./webtorrent.min.js
-          try {
-            writeLog('Attempting secondary local fallback at ./webtorrent.min.js');
-            await new Promise((resolve, reject) => {
-              const s2 = document.createElement('script');
-              s2.src = './webtorrent.min.js';
-              s2.onload = () => resolve();
-              s2.onerror = () => reject(new Error('Failed to load ./webtorrent.min.js'));
-              document.head.appendChild(s2);
-            });
-            if (!window.WebTorrent) throw new Error('Local root UMD loaded but window.WebTorrent missing');
-            writeLog('WebTorrent UMD loaded from ./webtorrent.min.js');
-            playerNote.textContent = 'WebTorrent loaded (local root UMD).';
-          } catch (rootErr) {
-            console.error('All WebTorrent load attempts failed:', esmErr, distErr, rootErr);
-            writeLog('FATAL: Could not load WebTorrent. Place dist/webtorrent.min.js or webtorrent.min.js in the repo or enable CDN access.');
-            playerNote.textContent = 'FATAL: WebTorrent failed to load — check logs.';
-            return;
-          }
-        }
-      }
-
-      // Inject application script after WebTorrent is available
-      try {
-        const app = document.createElement('script');
-        app.src = 'script.js';
-        app.onload = () => writeLog('App script loaded (script.js).');
-        app.onerror = () => writeLog('Failed to load app script (script.js).');
-        document.body.appendChild(app);
-      } catch (e) {
-        writeLog('Failed to inject app script: ' + (e && e.message ? e.message : e));
-      }
-    })();
-  </script>
+    <!-- Include WebTorrent library from CDN -->
+    <script src="https://cdn.jsdelivr.net/npm/webtorrent@latest/webtorrent.min.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
